feat: noteプラットフォーム向け記事作成スキルを追加
- note記事作成スキル (.claude/skills/note-writing/SKILL.md)
- 記事出力ディレクトリ (note-articles/) を作成
- .gitignoreにプロジェクト設定を追加
  - note-articles/配下をgitignore（記事は個別管理）
  - 環境変数ファイルを除外
  - Next Engine API使用状況ファイルを除外
  - Cloudflare Workers関連ファイルを除外
- CLAUDE.mdにnoteスキルを登録

対応機能:
- 記事構成設計、コンテンツ作成、SEO最適化
- 複数テンプレート（ハウツー、体験談、技術解説）
- カスタムトーン・スタイル調整

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 firebase-debug.log
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Note articles (output directory for note-writing skill)
+note-articles/*
+!note-articles/.gitkeep
+
+# Next Engine API usage tracking (sensitive data)
+next-engine-config/api-usage.json
+next-engine-config/logs/usage-backups/
+next-engine-config/logs/usage-reports/
+
+# Cloudflare Workers (API Usage Manager)
+next-engine-config/workers/api-usage-manager/node_modules/
+next-engine-config/workers/api-usage-manager/.dev.vars
+next-engine-config/workers/api-usage-manager/dist/
+next-engine-config/workers/api-usage-manager/.wrangler/
