feat: Next Engine API最適化とスキルドキュメント拡充
APIアクセス数を最小化するための最適化とドキュメント整備。

product-config.yaml更新:
- ページサイズを100→1000に変更（最大値使用）
- 全カラム取得設定を追加（再取得を回避）

SKILL.md大幅拡充:
- APIアクセス数最小化のベストプラクティス（8つの戦略）
  1. 最大ページサイズ使用（1000件/回）
  2. 全カラム取得（再取得回避）
  3. キャッシュ戦略（マスタデータ）
  4. 差分同期（変更分のみ）
  5. バッチ処理（100件単位）
  6. サーバーサイドフィルタリング
  7. 順次実行（並列処理回避）
  8. 事前推定（不要な取得回避）

- 環境検出機能の実装ガイド
  - 本番 vs テスト環境の自動判定
  - NEXT_ENGINE_ENV環境変数
  - API URLパターンマッチング

- リモートAPI使用量管理の実装ガイド
  - Cloudflare Workers統合
  - ハイブリッドモード（リモート優先）
  - ローカルフォールバック
  - 使用状況チェック・記録のAPI実装例

- Worker統合ガイド（認証Worker等）

--- a/next-engine-config/product-config.yaml
+++ b/next-engine-config/product-config.yaml
@@ -40,8 +40,10 @@ existing_products:
     cache_file: ./cache/existing-products.json
     # キャッシュ有効期限（時間）
     cache_ttl_hours: 24
-    # 取得時のページサイズ
-    page_size: 100
+    # 取得時のページサイズ（最大値推奨: APIアクセス数を最小化）
+    page_size: 1000  # Next Engineの最大値
+    # 取得するカラム（全カラム推奨: 再取得を避ける）
+    fields: "*"  # 全カラム取得
 
   # 商品識別キー（優先順位順）
   identification_keys:
